force-app/main/default/objects/DeliveryInstructions__c/DeliveryInstructions__c.object-meta.xml
<CustomObject>
    <label>Delivery Instructions</label>
    <nameField> 
        <displayFormat>LV-{YY}-{0}</displayFormat> 
        <startingNumber>1</startingNumber> 
        <label>LVID</label>
        <type>AutoNumber</type> 
    </nameField>
    <pluralLabel>Delivery Instructions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>