force-app/main/default/objects/DeliveryInstructions__c/fields/AdditionalTitle__c.field-meta.xml
<CustomField>
    <fullName>AdditionalTitle__c</fullName>
    <label>Additional Title  </label> 
    <length>10</length>
    <type>Text</type>
</CustomField>