force-app/main/default/objects/DeliveryInstructions__c/fields/DateOfIssue__c.field-meta.xml
<CustomField>
    <fullName>DateOfIssue__c</fullName>
    <label>Date Of Issue  </label> 
    <type>Date</type>
</CustomField>