force-app/main/default/objects/DeliveryInstructions__c/fields/DateOfRemarkSales__c.field-meta.xml
<CustomField>
    <fullName>DateOfRemarkSales__c</fullName>
    <label>Date Of Remark Sales  </label> 
    <type>Date</type>
</CustomField>