force-app/main/default/objects/DeliveryInstructions__c/fields/DateOfTechnicalRemark__c.field-meta.xml
<CustomField>
    <fullName>DateOfTechnicalRemark__c</fullName>
    <label>Date Of Technical Remark  </label> 
    <type>Date</type>
</CustomField>