force-app/main/default/objects/DeliveryInstructions__c/fields/FlagMonthYearOnly__c.field-meta.xml
<CustomField>
    <fullName>FlagMonthYearOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flag MonthYear Only</label>
    <type>Checkbox</type>
</CustomField>