force-app/main/default/objects/DeliveryInstructions__c/fields/FlagPrint__c.field-meta.xml
<CustomField>
    <fullName>FlagPrint__c</fullName>
    <label>Flag Print  </label> 
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>