force-app/main/default/objects/DeliveryInstructions__c/fields/InternalRemarkSales__c.field-meta.xml
<CustomField>
    <fullName>InternalRemarkSales__c</fullName>
    <label>Internal Remark Sales  </label> 
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>