force-app/main/default/objects/DeliveryInstructions__c/fields/InternalTechnicalRemark__c.field-meta.xml
<CustomField>
    <fullName>InternalTechnicalRemark__c</fullName>
    <label>Internal Technical Remark  </label> 
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>