force-app/main/default/objects/DeliveryInstructions__c/fields/ProductManager__c.field-meta.xml
<CustomField>
    <fullName>ProductManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Manager  </label> 
    <referenceTo>User</referenceTo>
    <relationshipName>DeliveryInstructions</relationshipName>
    <type>Lookup</type>
</CustomField>