force-app/main/default/objects/DeliveryInstructions__c/fields/Publisher__c.field-meta.xml
<CustomField>
    <fullName>Publisher__c</fullName>  
    <label>Publisher</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A.T.M.</fullName>
            </value>
            <value>
                <fullName>AAM</fullName>
            </value>
            <value>
                <fullName>ABC Umformtechnik</fullName>
            </value>
            <value>
                <fullName>ABTech</fullName>
            </value>
            <value>
                <fullName>AFF</fullName>
            </value>
            <value>
                <fullName>AFF ST. FLO</fullName>
            </value>
            <value>
                <fullName>AFF Visserie</fullName>
            </value>
            <value>
                <fullName>AFNOR</fullName>
            </value>
            <value>
                <fullName>AMS</fullName>
            </value>
            <value>
                <fullName>ARC Automotiv Inc.</fullName>
            </value>
            <value>
                <fullName>ARS Industries</fullName>
            </value>
            <value>
                <fullName>AS</fullName>
            </value>
            <value>
                <fullName>ASDO</fullName>
            </value>
            <value>
                <fullName>ASSI</fullName>
            </value>
            <value>
                <fullName>ASTM</fullName>
            </value>
            <value>
                <fullName>ASW</fullName>
            </value>
            <value>
                <fullName>ATE</fullName>
            </value>
            <value>
                <fullName>ATG</fullName>
            </value>
            <value>
                <fullName>ATR</fullName>
            </value>
            <value>
                <fullName>AUSA</fullName>
            </value>
            <value>
                <fullName>AUTOCAM</fullName>
            </value>
            <value>
                <fullName>AWS</fullName>
            </value>
            <value>
                <fullName>Aartee Bright Bar</fullName>
            </value>
            <value>
                <fullName>Abinsa</fullName>
            </value>
            <value>
                <fullName>Acenta</fullName>
            </value>
            <value>
                <fullName>Aceros Grinon</fullName>
            </value>
            <value>
                <fullName>Aciéries de Bonpertuis</fullName>
            </value>
            <value>
                <fullName>Ador Welding</fullName>
            </value>
            <value>
                <fullName>Agrati</fullName>
            </value>
            <value>
                <fullName>Ahle Federn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>