force-app/main/default/objects/DeliveryInstructions__c/fields/QualityManager__c.field-meta.xml
<CustomField>
    <fullName>QualityManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quality Manager  </label> 
    <referenceTo>User</referenceTo>
    <relationshipName>Delivery_Instructions1</relationshipName>
    <type>Lookup</type>
</CustomField>