force-app/main/default/objects/DeliveryInstructions__c/fields/QualityRepresentative__c.field-meta.xml
<CustomField>
    <fullName>QualityRepresentative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quality Representative  </label> 
    <referenceTo>User</referenceTo>
    <relationshipName>Delivery_Instructions2</relationshipName>
    <type>Lookup</type>
</CustomField>