force-app/main/default/objects/DeliveryInstructions__c/fields/RemarkinAttachment__c.field-meta.xml
<CustomField>
    <fullName>RemarkinAttachment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remark in Attachment</label>
    <type>Checkbox</type>
</CustomField>