force-app/main/default/objects/DeliveryInstructions__c/fields/RemarkSalesDE__c.field-meta.xml
<CustomField>
    <fullName>RemarkSalesDE__c</fullName>
    <label>Remark Sales (DE)  </label> 
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>