force-app/main/default/objects/DeliveryInstructions__c/fields/RemarkSalesEN__c.field-meta.xml
<CustomField>
    <fullName>RemarkSalesEN__c</fullName>
    <label>Remark Sales (EN)  </label> 
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>