force-app/main/default/objects/DeliveryInstructions__c/fields/RemarkSalesFR__c.field-meta.xml
<CustomField>
    <fullName>RemarkSalesFR__c</fullName>
    <label>Remark Sales (FR)  </label> 
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>