force-app/main/default/objects/DeliveryInstructions__c/fields/Revision__c.field-meta.xml
<CustomField>
    <fullName>Revision__c</fullName>
    <label>Revision  </label> 
    <length>4</length>
    <type>Text</type>
</CustomField>