force-app/main/default/objects/DeliveryInstructions__c/fields/SalesRepresentative__c.field-meta.xml
<CustomField>
    <fullName>SalesRepresentative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Representative  </label> 
    <referenceTo>User</referenceTo>
    <relationshipName>Delivery_Instructions</relationshipName>
    <type>Lookup</type>
</CustomField>