force-app/main/default/objects/DeliveryInstructions__c/fields/StatusFull__c.field-meta.xml
<CustomField>
    <fullName>StatusFull__c</fullName> 
    <label>Status Full</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fully Processed</fullName>
            </value>
            <value>
                <fullName>Partly Processed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>