force-app/main/default/objects/DeliveryInstructions__c/fields/TechnicalRemarkDE__c.field-meta.xml
<CustomField>
    <fullName>TechnicalRemarkDE__c</fullName>
    <label>Technical Remark (DE)  </label> 
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>