force-app/main/default/objects/DeliveryInstructions__c/fields/TechnicalRemarkEN__c.field-meta.xml
<CustomField>
    <fullName>TechnicalRemarkEN__c </fullName>
    <label>Technical Remark (EN)  </label> 
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>