force-app/main/default/objects/DeliveryInstructions__c/fields/TechnicalRemarkFR__c.field-meta.xml
<CustomField>
    <fullName>TechnicalRemarkFR__c</fullName>
    <label>Technical Remark (FR)  </label> 
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>