force-app/main/default/objects/DeliveryInstructions__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName> 
    <label>Title  </label> 
    <length>40</length>
    <type>Text</type>
</CustomField>