force-app/main/default/objects/DeliveryInstructions__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>LV</fullName>
            </value>
            <value>
                <fullName>Norm</fullName>
            </value>
            <value>
                <fullName>QSV</fullName>
            </value>
            <value>
                <fullName>WDB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>